--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -2328,11 +2328,9 @@ By convention, we declare the empty sequence of subset $1$-shift operators to be
 The original $\SU$ diagonal was so defined in \cite{SaneblidzeUmble04}, see also \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
 
 \begin{remark}
-    Observe that the left (resp. right) subset $1$-shift operator moves elements to the left (resp. right), but acts on the right (resp. left) ordered partition.
-    In the analogous description for the diagonal $\LAD$ obtained at the end of the Section \Guillaume{[REF]}, left and right subset $1$-shift operators act on the left and right ordered partitions, respectively. 
+    Observe that the left (resp. right) shifts acts on the right (resp. left) ordered partition.
+    In the analogous description for the diagonal $\LAD$ obtained at the end of the Section \Guillaume{[REF]}, left and right shifts act on the left and right ordered partitions, respectively. 
 \end{remark}
-
-We now restrict the size and condition on the subsets that can be moved, but allow them to move more than one block at a time. 
 
 %%%%
 
@@ -2340,25 +2338,29 @@ We now restrict the size and condition on the subsets that can be moved, but all
 
 \begin{proposition} 
 \label{prop:SU-preserves-max}
-The admissible subset $1$-shift operators conserve the maximal element of any path between two blocks of the same ordered partition.
-In particular, for a pair of ordered partitions $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ obtained via an admissible sequence of $1$-shifts from a strong complementary pair~$(\sigma,\tau)$, we have that
-\begin{align*}
+Admissible sequences of shifts of the original $\SU$ diagonal conserve 
+\begin{enumerate}
+    \item the maximal element of any path between two blocks of the same ordered partition,
+    \item the direction in which this element is traversed. 
+\end{enumerate}
+
+In particular, for a pair of ordered partitions $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ obtained via an admissible sequence of shifts from a strong complementary pair~$(\sigma,\tau)$, we have that
+\begin{align}
+    \label{eq:max-1}
     \max R_{\mathbf{M}}(\sigma)_{i,j} = \max \sigma_{i,j} \text{ and } \max L_{\mathbf{N}}(\tau)_{i,j} = \max \tau_{i,j}
-\end{align*}
+\end{align}
 and consequently that
-\begin{align*}
+\begin{align}
+    \label{eq:max-2}
     \max R_{\mathbf{M}}(\sigma)_{i,i+1} = \max \sigma_{i+1} \text{ and } \max L_{\mathbf{N}}(\tau)_{i,i+1} = \max \tau_{i}  \ .
-\end{align*}
-Moreover, the direction in which this maximal element is traversed in the path is also preserved. 
+\end{align}
 \end{proposition}
 
-\begin{remark}
-    Note that in the fist line of \cref{prop:SU-preserves-max}, the maxima $\max \sigma_{i,j}$ and $\max \tau_{i,j}$ are maxima of \emph{paths}, while in the second line the maxima $\max \sigma_{i+1}$ and $\max \tau_{i}$ are maxima of \emph{blocks}.
-\end{remark}
+\Guillaume{review terminology in the proof}
 
 \begin{proof}
-For simplicity, in this proof we use ``shift" instead of ``$1$-shift".
 We consider the right subset shift operator; the left subset shift operator proceeds similarly.
+Let us start with Point (1).
 As $\SCP$s trivially meet the above conditions, we will prove the result inductively by assuming the result holds for $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and then showing that applying an admissible operator $R_{M_k}$ conserves the maximal elements of paths.
 By the inductive hypothesis, we know that $\max R_{\mathbf{M}}(\sigma)_{k,k+1}= \max \sigma_{k+1}$.
 As $R_{M_k}$ is an admissible operator, we know two things.
@@ -2377,6 +2379,7 @@ Throughout the rest of this proof, we use the following shorthand: we denote by 
 Let~$\gamma$ be any path between two blocks of $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, and let~$\gamma'$ be the path between the same blocks, by indices, in $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$. 
 There are four cases to consider. 
 \begin{enumerate}
+
     \item $\gamma$ does not contain an element of $M_k$.
     It is thus unaffected by the shift, so $\gamma' = \gamma$.
 
@@ -2387,6 +2390,7 @@ There are four cases to consider.
     For the same reason, $\beta \cap \delta_{k,k+1}$ must be connected and starting at $R_\mathbf{M}(\sigma)_{k}$.
     Then there are two cases to consider:
     \begin{enumerate}
+
         \item $\beta$ does not use any steps of $\delta_{k,k+1}$, in which case $\gamma' = \alpha m \delta_{k+1,k} \beta$.
         This is a path in the tree of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ with no repeated steps, as such it must be the unique minimal path. 
         
@@ -2395,56 +2399,72 @@ There are four cases to consider.
         As such, the path $(\delta_{k+1,k}\ssm \beta)$ reaches the point of divergence from $R_{\mathbf{M}}(\sigma)_{k+1}$ instead of $R_{\mathbf{M}}(\sigma)_{k}$, then the path $(\beta \ssm \delta_{k+1,k})$ completes the rest of the route unchanged.
 
     \end{enumerate}
+
     \item $\gamma$ contains two elements of $M_k$. In which case we still have $\gamma'=\gamma$ (in path elements) but $\gamma'$ will step through the $(k+1)$th block instead of $\gamma$ stepping through the $k$th block.
     
     \item $\gamma$ contains more than two elements of $M_k$. 
     This is impossible, as $\gamma$ would not be a minimal path on a tree.
+
 \end{enumerate}
 Observe all (non-trivial or non-contradictory) paths $\gamma'$ contain $m>\min M_k$ and either some addition or deletion by $\delta_{k,k+1}$.
 It thus follows from \cref{eq:shift-subset-dominates} that $\max \gamma' = \max \gamma$: in each case, the maximal element will either be $m$, or in $\alpha$, or in $\beta$.
-Moreover, in each case, the maximal element $\max \gamma = \max \gamma'$ are traversed in the same direction.
-It is immediate for cases (1), (2a) and (3); in the case (2b) it follows from the observation that the number of steps of $\beta \cap \delta_{k,k+1}$ and $\delta_{k,k+1} \ssm \beta$ have the same parity. \Guillaume{rewrite}
+
+For Point (2), we need to see that the maximal element $\max \gamma = \max \gamma'$ are traversed in the same direction.
+It is immediate for cases (1), (2a) and (3); the condition is empty in the case (4).
+For the case (2b) it follows from the observation that the number of steps of $\beta \cap \delta_{k,k+1}$ and $\delta_{k,k+1} \ssm \beta$ have the same parity: since $\delta_{k,k+1}$ has an even number of steps, either they both have an even number of steps, or an odd number, which completes the proof.
 \end{proof}
+
+\begin{remark}
+    Note that in \cref{eq:max-1}, the maxima $\max \sigma_{i,j}$ and $\max \tau_{i,j}$ are maxima of \emph{paths}, while in \cref{eq:max-2} the maxima $\max \sigma_{i+1}$ and $\max \tau_{i}$ are maxima of \emph{blocks}.
+\end{remark}
 
 \begin{corollary} 
 \label{cor:SU-shift-preserves-max}
-The critical left and right shift operators conserve the maximal element of paths.
-In particular, if $(\sigma',\tau')$ is generated from a $\SCP$ $(\sigma,\tau)$ by critical shifts, then we have
-\begin{align*}
-    \max \sigma'_{i,i+1} = \max \sigma_{i+1} \text{ and } \max \tau'_{i,i+1} = \max \tau_{i} \ .
-\end{align*}
+Admissible sequences of shifts of the $m$-path $\SU$ diagonal conserve 
+\begin{enumerate}
+    \item the maximal element of any path between two blocks of the same ordered partition,
+    \item the direction in which this element is traversed. 
+\end{enumerate}
+In particular, if a pair of ordered partitions $(\sigma',\tau')$ is generated from a strong complementary pair~$(\sigma,\tau)$ by $m$-path shifts, then we have
+\begin{align}
+    \label{eq:max-3}
+    \max \sigma'_{i,i+m} = \max \sigma_{i+m} \text{ and } \max \tau'_{i,i+m} = \max \tau_{i} \ .
+\end{align}
 \end{corollary}
 
 \begin{proof}
-    By definition of the critical shifts, \cref{eq:shift-subset-dominates} holds and we can run the proof of \cref{prop:SU-preserves-max} \emph{mutatis mutandis}.
+    By definition of the admissible $m$-path shifts, \cref{eq:shift-subset-dominates} holds and we can run the proof of \cref{prop:SU-preserves-max} \emph{mutatis mutandis}; moreover, there is no harm in replacing the tuple $k,k+1$ by the tuple $k,k+m$ in everything that follows \cref{eq:shift-subset-dominates}.
 \end{proof}
 
 We have now dropped the assumption that $\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1}$, and the assumption that we need to perform shifts in an increasing order; once this is done, we can generate all subset shifts by chains of singleton set shifts.
 
 \begin{proposition}
 \label{prop:subset shift to shift bijection}
-The subset shift and shift definitions of the $\SUD$ diagonal coincide.
+The original and $1$-shift $\SU$ diagonals coincide.
 \end{proposition}
+
+\Guillaume{review terminology in the proof}
 
 \begin{proof}
 We analyse the right shift operator, the case of the left shift is similar. 
-First, we observe that any subset right shift $R_{M_k}(\sigma)$ can be decomposed into a series of critical elements right shifts: since $\min M_k > \max \sigma_{k,k+1}$ by the proof of \cref{prop:SU-preserves-max}, we can shift the elements of $M_k$ to the right one after the other (in any order!).
-This shows that any facet of the subset shift $\SUD$ diagonal is also a facet in the shift $\SUD$ diagonal.
+First, we observe that any subset right shift $R_{M_k}(\sigma)$ can be decomposed into a series of singleton right shifts: since $\min M_k > \max \sigma_{k,k+1}$ by the proof of \cref{prop:SU-preserves-max}, we can shift the elements of $M_k$ to the right one after the other (in any order!).
+This shows that any facet of the original $\SU$ diagonal is also a facet in the $1$-shift $\SU$ diagonal.
 
 For the reverse inclusion, we proceed by induction. 
-We are required to show that if we apply a critical right shift to $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, say $(R_{\rho}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, then this can be re-expressed as a well-defined subset shift operation $(R_{\mathbf{M'}}(\sigma),L_{\mathbf{N}}(\tau))$. Suppose that prior to the critical shift that $\rho$ lives in block $l$, then we must have
+We are required to show that if we apply a right $1$-shift to $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, say $(R_{\rho}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$, then this can be re-expressed as a well-defined subset shift operation $(R_{\mathbf{M'}}(\sigma),L_{\mathbf{N}}(\tau))$. Suppose that prior to the $1$-shift that $\rho$ lives in block $l$, then we must have
 \begin{align*}
     1 \leq i_1 < \dots < i_j \leq l < i_{j+1} <\dots< i_p \leq k-1
 \end{align*}
 for some $j$. 
-If $i_j < l$, then $R_{\rho}R_{\mathbf{M}}(\sigma) = R_{M_{i_p}}\dots R_{\{\rho\}_{l}}R_{M_{i_j}}\dots R_{M_{i_1}}(\sigma)$, and we are done.
+If $i_j < l$, then we have $R_{\rho}R_{\mathbf{M}}(\sigma) = R_{M_{i_p}}\dots R_{\{\rho\}_{l}}R_{M_{i_j}}\dots R_{M_{i_1}}(\sigma)$, and we are done.
 Otherwise, if $i_j = l$, we set $M'_{i_j} = M_{i_j} \cup \{\rho \}$. 
 It is clear that we have $R_{\rho}R_{\mathbf{M}}(\sigma) = R_{M_{i_p}}\dots R_{M'_{i_j}}\dots R_{M_{i_1}}(\sigma)$, however, we need to check that $R_{M'_{i_j}}$ is a well-defined subset operator. 
 That is, we need to check that $\min M_{i_j}' > \max (R_{M_{i_{j-1}}}\dots R_{M_{i_1}}(\sigma))_{i_j+1}$.
 If~$\rho > \min M_{i_j}$, then we are done since in this case $\min M_{i_j}'=\min M_{i_j}$ and $R_{M_{i_j}}$ is a well-defined subset shift operator.
 Otherwise, we have $\rho=\min M_{i_j}'$. 
 Since by definition subset shift operators do not move the minimal element of a block, we have that $\rho > \min R_{\mathbf{M}}(\sigma)_{i_j}= \min (R_{M_{i_{j-1}}}\dots R_{M_{i_1}}(\sigma))_{i_j}$.
-Then from \cref{cor:SU-shift-preserves-max}, we know that $\rho>\max \sigma_{i_j+1} = \max (R_{M_{i_{j-1}}}\dots R_{M_{i_1}}(\sigma))_{i_j + 1}$, where the equality follows as $i_1<\dots<i_{j-1}<i_j$. This proves that $R_{M'_{i_j}}$ is well-defined, completing the inductive proof.
+Then using the induction hypothesis, \cref{prop:SU-preserves-max} shows that $\rho>\max \sigma_{i_j+1} = \max (R_{M_{i_{j-1}}}\dots R_{M_{i_1}}(\sigma))_{i_j + 1}$, where the equality follows as $i_1<\dots<i_{j-1}<i_j$. 
+This proves that $R_{M'_{i_j}}$ is well-defined, completing the inductive proof.
 \end{proof}
 %On peut se servir de l'hypothèse de récurrence et de la Proposition 2.45. Pas besoin du corollaire!!
 
